Cambie el titulo del layout

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap"
       rel="stylesheet"
     />
-    <title>Luxury store | E-commerce</title>
+    <title>Luxury store | Shop</title>
   </head>
   <body>
     <header id="header">
